# DMCWingWorks

./: .gitignore  .swiftlint.yml  LICENSE  Package.swift  README.md  clean_build_run.sh
Docs/images/: airfoil_at_rest.afdesign  airfoil_in_motion.afdesign  airfoil_in_motion_normals.afdesign
Docs/reading_list/: README.md
Sources/DMCWingWorks/: AirFoil.swift  AirFoilCollision.swift  Particle.swift  Polygon.swift  SATCollision.swift  SlidingWindowVector.swift  Vector.swift  World.swift  WorldCells.swift
Sources/DMCWingWorksSim/: main.swift
Tests/: LinuxMain.swift
misc/data_parallel/research/openmp/: CMakeLists.txt  clean_build_run.sh  display_results.py
misc/data_parallel/research/openmp/scratch/: think_matrixly.py
misc/data_parallel/research/openmp/src/: demo.cpp
misc/data_parallel/research/openmp/src/include/: airfoil.h  airfoil_collision.h  bbox.h  dot_min_max.h  particle.h  point.h  polygon.h  sat_poly_collision.h  segment.h  vector.h  world.h  world_cells.h
misc/data_parallel/research/openmp/src/lib/: airfoil.cpp  airfoil_collision.cpp  bbox.cpp  dot_min_max.cpp  particle.cpp  point.cpp  polygon.cpp  sat_poly_collision.cpp  world.cpp  world_cells.cpp
misc/data_parallel/research/openmp/tests/: CMakeLists.txt  test_airfoil_collision.cpp  test_particle_collision.cpp  test_poly_contains.cpp
misc/data_parallel/research/python/: .envrc  README.md  license.txt  pyproject.toml  requirements.txt  setup.cfg  tox.ini
misc/data_parallel/research/python/src/tests/: test_particles.py
misc/data_parallel/research/python/src/wingworks/: particles.py  world.py
(+31 files in other folders)
