[metadata]
name = wingworks
version = attr: wingworks.VERSION
description = A data-parallel representation of a particle-collision model
long_description = file: README.md, LICENSE.txt
license = MIT License

[options]
package_dir =
    =src
packages = find:

install_requires =
    numpy
    pandas
    scipy

[options.packages.find]
where = src
exclude =
    tests